[package]
name = "presale" # Assuming your program name is "presale" based on module imports in lib.rs
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "presale" # This should match the 'name' in your programs.localnet in Anchor.toml if different from 'neurolov'

[features]
no-entrypoint = []
no-idl = []
no-cpi = []
default = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"] # Added "anchor-spl/idl-build" to propagate feature

[dependencies]
anchor-lang = { version = "0.31.1", features = ["derive"] } # Updated to 0.31.1
anchor-spl = { version = "0.31.1", features = ["spl-token", "metadata"] } # Updated to 0.31.1
# solana-program = "1.18.0" # Removed: Will now use anchor_lang::solana_program