[package]
name = "presale" 
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "presale" 

[features]
no-entrypoint = []
no-idl = []
no-cpi = []
default = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"] 

[dependencies]
anchor-lang = { version = "0.31.1", features = ["derive"] } 
anchor-spl = { version = "0.31.1", features = ["spl-token", "metadata"] } 